--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ concurrency:
 
 jobs:
   static:
-    name: Nix - Linux static
+    name: Nix - Linux x64 static
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -49,12 +49,12 @@ jobs:
           if-no-files-found: error
 
       - name: Build Docker image
-        run: nix-build -A docker.image --out-link postgrest-docker.tar.gz
+        run: nix-build -A docker.image --out-link postgrest-docker-amd64.tar.gz
       - name: Save built Docker image as artifact
         uses: actions/upload-artifact@v4
         with:
           name: postgrest-docker-x64
-          path: postgrest-docker.tar.gz
+          path: postgrest-docker-amd64.tar.gz
           if-no-files-found: error
 
 
