--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - v[0-9]+
+      - test
     tags:
       - v*
 
@@ -34,70 +35,30 @@ jobs:
 
 
   arm:
-    name: Build / Cabal - aarch64 GHC 9.4.8
-    runs-on: ubuntu-latest
-    outputs:
-      remotepath: ${{ steps.Remote-Dir.outputs.remotepath }}
-    env:
-      GITHUB_COMMIT: ${{ github.sha }}
-      GHC_VERSION: '9.4.8'
+    name: Nix - Linux aarch64 static
+    runs-on:
+      - self-hosted
+      - Linux
+      - ARM64
     steps:
       - uses: actions/checkout@v4
-      - id: Remote-Dir
-        name: Unique directory name for the remote build
-        run: echo "remotepath=postgrest-build-$(uuidgen)" >> "$GITHUB_OUTPUT"
-      - name: Copy script files to the remote server
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SSH_ARM_HOST }}
-          username: ubuntu
-          key: ${{ secrets.SSH_ARM_PRIVATE_KEY }}
-          fingerprint: ${{ secrets.SSH_ARM_FINGERPRINT }}
-          source: ".github/scripts/arm/*"
-          target: ${{ steps.Remote-Dir.outputs.remotepath }}
-          strip_components: 3
-      - name: Build ARM
-        uses: appleboy/ssh-action@master
-        env:
-          REMOTE_DIR: ${{ steps.Remote-Dir.outputs.remotepath }}
-        with:
-          host: ${{ secrets.SSH_ARM_HOST }}
-          username: ubuntu
-          key: ${{ secrets.SSH_ARM_PRIVATE_KEY }}
-          fingerprint: ${{ secrets.SSH_ARM_FINGERPRINT }}
-          command_timeout: 120m
-          script_stop: true
-          envs: GITHUB_COMMIT,REMOTE_DIR,GHC_VERSION
-          script: bash ~/$REMOTE_DIR/build.sh "$GITHUB_COMMIT" "$REMOTE_DIR" "GHC_VERSION"
-      - name: Download binaries from remote server
-        uses: nicklasfrahm/scp-action@main
-        with:
-          direction: download
-          host: ${{ secrets.SSH_ARM_HOST }}
-          username: ubuntu
-          key: ${{ secrets.SSH_ARM_PRIVATE_KEY }}
-          fingerprint: ${{ secrets.SSH_ARM_FINGERPRINT }}
-          source: "${{ steps.Remote-Dir.outputs.remotepath }}/result.tar.xz"
-          target: "result.tar.xz"
-      - name: Remove uploaded files from server
-        if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
-        uses: appleboy/ssh-action@master
-        env:
-          REMOTE_DIR: ${{ steps.Remote-Dir.outputs.remotepath }}
-        with:
-          host: ${{ secrets.SSH_ARM_HOST }}
-          username: ubuntu
-          key: ${{ secrets.SSH_ARM_PRIVATE_KEY }}
-          fingerprint: ${{ secrets.SSH_ARM_FINGERPRINT }}
-          envs: REMOTE_DIR
-          script: rm -rf $REMOTE_DIR
-      - name: Extract downloaded binaries
-        run: tar -xvf result.tar.xz && rm result.tar.xz
-      - name: Save aarch64 executable as artifact
+
+      - name: Build static executable
+        run: nix-build -A postgrestStatic
+      - name: Save built executable as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: postgrest-ubuntu-aarch64
-          path: result/postgrest
+          name: postgrest-linux-static-aarch64
+          path: result/bin/postgrest
+          if-no-files-found: error
+
+      - name: Build Docker image
+        run: nix-build -A docker.image --out-link postgrest-docker-arm64.tar.gz
+      - name: Save built Docker image as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: postgrest-docker-aarch64
+          path: postgrest-docker-arm64.tar.gz
           if-no-files-found: error
 
 
@@ -233,22 +194,26 @@ jobs:
         with:
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
           tools: release
-      - name: Download Docker image
+      - name: Download Docker images
         uses: actions/download-artifact@v4
         with:
-          name: postgrest-docker-x64
+          pattern: postgrest-docker-*
       - name: Publish images on Docker Hub
         run: |
           docker login -u "$DOCKER_USER" -p "$DOCKER_PASS"
-          docker load -i postgrest-docker.tar.gz
+          docker load -i postgrest-docker-amd64.tar.gz
+          docker load -i postgrest-docker-arm64.tar.gz
 
-          docker tag postgrest:latest "$DOCKER_REPO/postgrest:v$VERSION"
+          docker manifest create \
+            "$DOCKER_REPO/postgrest:v$VERSION" \
+            --amend postgrest:x86_64-linux \
+            --amend postgrest:aarch64-linux
           docker push "$DOCKER_REPO/postgrest:v$VERSION"
 
           # Only tag 'latest' for full releases
           if [[ -z "$ISPRERELEASE" ]]; then
             echo "Pushing to 'latest' tag for full release of v$VERSION ..."
-            docker tag postgrest:latest "$DOCKER_REPO"/postgrest:latest
+            docker tag "$DOCKER_REPO/postgrest:v$VERSION" "$DOCKER_REPO"/postgrest:latest
             docker push "$DOCKER_REPO"/postgrest:latest
           else
             echo "Skipping pushing to 'latest' tag for v$VERSION pre-release..."
@@ -265,55 +230,3 @@ jobs:
 #          else
 #            echo "Skipping updating description for pre-release..."
 #          fi
-
-
-  docker-arm:
-    name: Release / Docker Hub Arm
-    runs-on: ubuntu-latest
-    needs:
-      - arm
-      - prepare
-      - docker
-    env:
-      GITHUB_COMMIT: ${{ github.sha }}
-      DOCKER_REPO: postgrest
-      DOCKER_USER: stevechavez
-      DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
-      VERSION: ${{ needs.prepare.outputs.version }}
-      ISPRERELEASE: ${{ needs.prepare.outputs.isprerelease }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Publish images for ARM builds on Docker Hub
-        uses: appleboy/ssh-action@master
-        env:
-          REMOTE_DIR: ${{ needs.arm.outputs.remotepath }}
-        with:
-          host: ${{ secrets.SSH_ARM_HOST }}
-          username: ubuntu
-          key: ${{ secrets.SSH_ARM_PRIVATE_KEY }}
-          fingerprint: ${{ secrets.SSH_ARM_FINGERPRINT }}
-          script_stop: true
-          envs: GITHUB_COMMIT,DOCKER_REPO,DOCKER_USER,DOCKER_PASS,REMOTE_DIR,VERSION,ISPRERELEASE
-          script: bash ~/$REMOTE_DIR/docker-publish.sh "$GITHUB_COMMIT" "$DOCKER_REPO" "$DOCKER_USER" "$DOCKER_PASS" "$REMOTE_DIR" "$VERSION" "$ISPRERELEASE"
-
-
-  clean-arm:
-    name: Build / Cleanup
-    needs:
-      - arm
-      - docker-arm
-    if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    env:
-      REMOTE_DIR: ${{ needs.arm.outputs.remotepath }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Remove uploaded files from server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_ARM_HOST }}
-          username: ubuntu
-          key: ${{ secrets.SSH_ARM_PRIVATE_KEY }}
-          fingerprint: ${{ secrets.SSH_ARM_FINGERPRINT }}
-          envs: REMOTE_DIR
-          script: rm -rf $REMOTE_DIR
